<resources>
    <string name="app_name">GetMovies( )</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- NavigationDrawer -->
    <string name="n_item_popular">Popular</string>
    <string name="n_item_top_rated">Top Rated</string>
    <string name="n_item_upcoming_movies">Upcoming Movies</string>
    <string name="n_item_search_by_genre">Search by Genre</string>

    <string name="n_item_profile">Profile</string>
    <string name="n_item_favorites">Favorites</string>
    <string name="n_item_logout">Logout</string>

    <string name="n_title">User Section</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="txt_email">user@email.com</string>

    <!-- Activity - Login -->
    <string name="login_hint">Enter your email</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="bt_login">Log in</string>
    <string name="sign_up_text">Don\'t have an account? Sign up</string>

    <!-- Activity - Register -->
    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter a email</string>
    <string name="pwd_reg_hint">Enter a password</string>
    <string name="bt_register">Register</string>

    <!-- Fragment - Search -->
    <string name="search_hint">Search</string>

    <!-- Fragment - User Settings -->
    <string name="username_hint">Username</string>
    <string name="upload_success">Upload Successful</string>
    <string name="upload_error">Upload Error</string>
    <string name="permission_error">Permission Denied</string>
    <string name="permission_message">To use the app is needed to accept permissions</string>
    <string name="confirm_message">Confirm</string>


    <!-- Fragments Title -->
    <string name="txt_popular">Popular</string>
    <string name="txt_top_rated">Top Rated</string>
    <string name="txt_upcoming">Upcoming Movies</string>
    <string name="txt_search_genre">Search by Genre</string>
    <string name="txt_favorites">Favorites</string>

    <!-- Intros -->
    <!-- 1 -->
    <string name="txt_welcome">Welcome to GetMovies( )</string>
    <!-- 2 -->
    <string name="txt_find">Find your favorite movies</string>
    <string name="txt_find2">Find information about popular, top rated\n and upcoming movies</string>
    <!-- 3 -->
    <string name="txt_create">Create your own list</string>
    <string name="txt_create2">Create a list with your favorite\n and expected movies</string>
    <!-- 4 -->
    <string name="txt_get_started">Get Started</string>

    <!-- Toolbar -->
    <string name="search_title">Search</string>


    <!-- Application -->
    <string name="exit_app">Exit GetMovies()?</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


</resources>
